Change back to homepage video to align correctly

--- a/style.css
+++ b/style.css
@@ -4486,7 +4486,7 @@ p > video {
 
 	.entry-content,
 	.entry-summary {
-		padding: 0 2% 0%;
+		padding: 0 10% 0%;
 	}
 
 	.entry-content h1,
